Allow to save ZX80/81 screen to .scr file
Allow to save text note on a ZSF snapshot
Allow to locate rom files running ZEsarUX from a current folder different than the rom path
Allow machine selection by family type (Spectrum, ZX80, ZX81, CPC, etc)
Added .ay file support to File Viewer
Allow to change configuration file path from the menu
Added configuration wizard when running ZEsarUX for the first time
Added support for up to 4 joystick fire buttons on:
- Kempston joystick (Spectrum): 4 buttons
- Amstrad CPC: 3 buttons
- Master System, SG1000, Colecovision: 2 buttons

* Improvements:

Improved AY Player:
- Allow to load playlist
- Allow to save playlist (full playlist or just marked files)
- Allow to increase track length (for some tracks with incorrect length)
- Added direct functions to next/previous track/file
- Show tenths of a second on song length and time elapsed
- Better shuffle algorithm
- Fixed silence detection when playback paused
- Tell if no song is playing

Improved Sinclair QL emulation:
- Allow to increase RAM size
- Allow to load and save QL screen files
- Added QL Screen file previews on File Selector
- Allow to use win1_ device as an alias to mdv1_ (useful for QL-SD paths)
- Fixed Sinclair QL keyboard: allow fast text writing
- Allow display blanking

Improved ZX Vision:
- Allow to hide minimized windows
- Allow to place windows beyond ZEsarUX main window limits
- Do not reopen menu when closing a Window
- Allow fast text writing on input fields
- Show, with a dot, when an icon is an open window but minimized
- Keep ZEsarUX window size proportions (disallow different zoom x/y) by default
- Hide cursor when sending a window to background
- Allow to show short text for icons on ZX Desktop
- Preserve icon name when changing its type
- Changed charset for style ZEsarUX Plus: now uses the same as AtariTOS, it's a charset with better readability