@@ -22,3 +22,12 @@ Probar en diferentes sistemas:
 --Fin lectura mando analógico, como un volante
 
 ---------------------
+
+
+-Expandir archivos también desde dsk y otros tipos de archivos , desde sus menus de storage
+
+-Ver pila de llamadas a gosub
+
+Desde sp en adelante (como mucho 16 en adelante). o desde 5C3D+6? esto no siempre
+03h 13h: inicio marca, o b4h 12h
+luego linea little endian, sentencia
